gt-apps/templates/roll_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: $J_APP_NAME
  namespace: $J_PROJECT_NAME
spec:
  ports:
  - name: http
    port: $J_APP_PORT
    protocol: TCP
    targetPort: $J_APP_PORT
  selector:
    app: $J_APP_NAME
    vertical: $J_PROJECT_NAME
    env: $J_ENVIRONMENT
  type: ClusterIP
